# performer

./: .gitmodules  CMakeLists.txt  config.yml  foster_config.yml  squigs_config.yml
.run/: ship_performer.run.xml
legacy/: DisplaySignalAction.h  DisplaySignalMovement.cpp  DisplaySignalMovement.h  Flash.cpp  Flash.h  FlashOnOnsetMovement.cpp  LoggingMovement.cpp  LoggingMovement.h  Ripple.cpp
scripts/: ship_performer.py
src/: Bootstrapper.cpp  Bootstrapper.h  Config.cpp  Config.h  main.cpp
src/color/: HSLColor.cpp  HSLColor.h  RGBColor.h
src/data/: Color.h
src/event/: Event.cpp  Event.h  EventCollection.cpp  EventCollection.h  EventReceiver.cpp  EventReceiver.h  InvalidUnserializationException.h
src/eventReceiver/: Event.cpp  Event.h  EventCollection.cpp  EventCollection.h  EventReceiver.cpp  EventReceiver.h  OnsetReceiver.cpp  OnsetReceiver.h
src/eventReceiver/event/: Event.h  OnsetEvent.cpp  OnsetEvent.h
src/ledMatrix/: Coordinate.cpp  Coordinate.h  LedGizmos.cpp  LedGizmos.h  LedMatrix.h  LedMatrixProxy.cpp  LedMatrixProxy.h  LedMatrixRenderer.cpp  LedMatrixRenderer.h  Ws2812bLedMatrix.cpp  Ws2812bLedMatrix.h  Ws2812bLedStrip.cpp  Ws2812bLedStrip.h  Ws2812bLedStripRenderer.cpp  Ws2812bLedStripRenderer.h
src/performance/: LedPerformance.cpp  LedPerformance.h  Performance.h
src/performance/action/: Action.h  ActionCollection.cpp  ActionCollection.h
src/performance/action/ledMatrixAction/: CircleGrowthAction.cpp  CircleGrowthAction.h  DisplaySignalAction.cpp  DisplaySignalAction.h  DragonCurveTraceAction.cpp  DragonCurveTraceAction.h  FlameAction.cpp  FlameAction.h  Flash.cpp  LedMatrixAction.cpp  LedMatrixAction.h  RectangleGrowthAction.cpp  RectangleGrowthAction.h  Ripple.h  RippleAction.cpp  RippleAction.h  SinusoidScatterAction.cpp  SinusoidScatterAction.h
src/performance/action/ledMatrixAction/entity/: Entity.cpp  Entity.h
src/performance/action/ledMatrixAction/entity/lindogram/: DragonCurve.cpp  DragonCurve.h  Lindogram.cpp  Lindogram.h
src/performance/action/ledMatrixAction/entity/parametro/: Parametro.cpp  Parametro.h  Sinusoid.cpp  Sinusoid.h
src/performance/action/ledMatrixAction/entity/shape/: Circle.cpp  Circle.h  Flame.cpp  Flame.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
src/performance/movement/: BeatMovement.cpp  BeatMovement.h  LoggingMovement.cpp  LoggingMovement.h  Movement.h  PitchTrackingMovement.cpp  PitchTrackingMovement.h  RippleMovement.cpp  RippleMovement.h
src/performance/movement/action/: Action.h  Beat.cpp  Beat.h  Ripple.cpp  Ripple.h
src/performance/movement/ledMatrixMovement/: CloudSpaceMovement.cpp  CloudSpaceMovement.h  DisplaySignalMovement.cpp  DisplaySignalMovement.h  DragonaryMovement.cpp  DragonaryMovement.h  EntitySpawner.cpp  EntitySpawner.h  FlameoHotmanMovement.cpp  FlameoHotmanMovement.h  FlashOnOnsetMovement.cpp  FlashOnOnsetMovement.h  LedMatrixMovement.cpp  LedMatrixMovement.h  RectanglandMovement.cpp  RectanglandMovement.h  RippleMovement.cpp  RippleMovement.h  SandboxMovement.cpp  SandboxMovement.h  SinusoidaleryMovement.cpp  SinusoidaleryMovement.h  WorshipMovement.cpp  WorshipMovement.h
src/performance/movement/rippleMovement/: RippleMovement.cpp  RippleMovement.h
src/performance/timeline/: OnsetTimeline.cpp  OnsetTimeline.h  PitchTimeline.cpp  PitchTimeline.h  Timeline.h  TimelineManager.cpp  TimelineManager.h
src/receiver/: AttributeReceiver.h  OnsetReceiver.cpp  OnsetReceiver.h
src/receiver/event/: Event.h
test/: TestingUtils.h
test/color/: TestHSLColor.cpp  TestRGBColor.cpp
test/data/: TestColor.cpp
